task-manager/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: { { .Values.service.backend.type } }
  ports:
    - port: { { .Values.service.backend.port } }
      targetPort: { { .Values.service.backend.port } }
  selector:
    app: backend
