task-manager/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: { { .Values.service.frontend.type } }
  ports:
    - port: { { .Values.service.frontend.port } }
      targetPort: { { .Values.service.frontend.port } }
  selector:
    app: frontend
