task-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: { { .Values.service.backend.port } }
      targetPort: { { .Values.service.backend.port } }
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: { { .Values.service.frontend.port } }
      targetPort: { { .Values.service.frontend.port } }
  selector:
    app: frontend
